--- a/sales.html
+++ b/sales.html
@@ -4,10 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dreampal.com – Comparable Domain Sales</title>
+
   <style>
     body { font-family: Arial, sans-serif; margin:0; padding:0; background:#f9fafc; color:#333; }
+
     header { background:#0d47a1; color:#fff; text-align:center; padding:2rem 1rem; }
-header h1 { margin:0; font-size:2rem; }
+    header h1 { margin:0; font-size:2rem; }
+    header p { margin-top:0.5rem; }
 
     /* Desktop Navigation */
     .desktop-nav ul {
@@ -17,21 +20,14 @@ header h1 { margin:0; font-size:2rem; }
       padding: 0;
       margin: 0;
     }
-
-    .desktop-nav li {
-      margin-left: 25px;
-    }
-
+    .desktop-nav li { margin-left: 25px; }
     .desktop-nav a {
       text-decoration: none;
       color: #555;
       font-weight: 500;
       transition: color 0.3s;
     }
-
-    .desktop-nav a:hover {
-      color: #6e8efb;
-    }
+    .desktop-nav a:hover { color: #6e8efb; }
 
     /* Mobile Navigation Toggle */
     .mobile-nav-toggle {
@@ -41,7 +37,7 @@ header h1 { margin:0; font-size:2rem; }
       font-size: 24px;
       cursor: pointer;
       color: #000000;
-      margin: 10px;
+      margin: 15px;
     }
 
     /* Mobile Navigation */
@@ -56,17 +52,8 @@ header h1 { margin:0; font-size:2rem; }
       box-shadow: 0 5px 10px rgba(0,0,0,0.1);
       z-index: 9999;
     }
-
-    .mobile-nav ul {
-      list-style: none;
-      padding-left: 20px;
-      margin: 0;
-    }
-
-    .mobile-nav li {
-      margin-bottom: 15px;
-    }
-
+    .mobile-nav ul { list-style: none; padding-left: 20px; margin: 0; }
+    .mobile-nav li { margin-bottom: 15px; }
     .mobile-nav a {
       text-decoration: none;
       color: #555;
@@ -75,12 +62,8 @@ header h1 { margin:0; font-size:2rem; }
       padding: 8px 0;
       transition: color 0.3s;
     }
+    .mobile-nav a:hover { color: #6e8efb; }
 
-    .mobile-nav a:hover {
-      color: #6e8efb;
-    }
-
-    /* Mobile close button */
     .mobile-nav-close {
       display: none;
       background: none;
@@ -93,19 +76,31 @@ header h1 { margin:0; font-size:2rem; }
       margin-bottom: 15px;
     }
 
-
     main { max-width:900px; margin:2rem auto; padding:0 1rem; }
     h2 { color:#0d47a1; }
-    table { width:100%; border-collapse:collapse; margin-top:1.5rem; }
+
+    /* Responsive Table */
+    .table-container {
+      overflow-x: auto;
+      -webkit-overflow-scrolling: touch;
+      margin-top: 1.5rem;
+    }
+    table {
+      width:100%;
+      border-collapse:collapse;
+      min-width: 400px; /* prevents text squashing */
+    }
     th, td { padding:0.75rem; border-bottom:1px solid #ccc; text-align:left; }
-th { background:#e3f2fd; color:#0d47a1; }
-.note {
+    th { background:#e3f2fd; color:#0d47a1; }
+
+    .note {
       background: #fff3cd;
       border-left: 5px solid #ff9800;
       padding: 1rem;
       margin: 1.5rem 0;
     }
-a.button {
+
+    a.button {
       display: inline-block;
       margin-top: 2rem;
       padding: 0.8rem 1.2rem;
@@ -115,54 +110,42 @@ a.button {
       border-radius: 5px;
       font-weight: bold;
     }
-    a.button:hover {
-      background: #6a1b9a;
-    }
+    a.button:hover { background: #6a1b9a; }
 
-footer {
+    footer {
       background: #f3f4f6;
       text-align: center;
       padding: 1rem;
       font-size: 0.9rem;
       color: #6b7280;
     }
-/* Responsive Styles */
+
+    /* Responsive Styles */
     @media (max-width: 768px) {
       header h1, header p, section h2 {
         text-align: left;
       }
+      .desktop-nav { display: none; }
+      .mobile-nav-toggle { display: block; }
+      .mobile-nav.active { display: block; }
+      .mobile-nav-close { display: block; }
 
-      .desktop-nav {
-        display: none;
-      }
-
-      .mobile-nav-toggle {
-        display: block;
-      }
-
-      .mobile-nav.active {
-        display: block;
-      }
-
-      /* Show close button in mobile menu */
-      .mobile-nav-close {
-        display: block;
-      }
+      h1 { font-size: 1.5rem; }
+      h2 { font-size: 1.2rem; }
     }
-
   </style>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9563749884177884"
      crossorigin="anonymous"></script>
 
 </head>
+
 <body>
   <header>
     <h1>Comparable AI & Companion Domain Sales</h1>
     <p>Why $198,000 for Dreampal.com is a smart investment</p>
-
   </header>
 
-<!-- Desktop Navigation -->
+  <!-- Desktop Navigation -->
   <nav class="desktop-nav">
     <ul>
       <li><a href="index.html">Home</a></li>
@@ -186,95 +169,86 @@ footer {
     </ul>
   </nav>
 
-<main>
+  <main>
+    <h2>Why $198,000 is a Fair Price for Dreampal.com</h2>
+    <p>
+      The AI and digital companion market is booming, with domain names selling for six and even seven figures. 
+      <strong>Dreampal.com</strong> is short, memorable, emotionally resonant, and uses the globally dominant <strong>.com</strong> extension.
+    </p>
 
-<h2>Why $198,000 is a Fair Price for Dreampal.com</h2>
-  <p>
-    The AI and digital companion market is booming, with domain names selling for six and even seven figures. 
-    <strong>Dreampal.com</strong> is short, memorable, emotionally resonant, and uses the globally dominant <strong>.com</strong> extension.
-  </p>
+    <h2>Recent Comparable AI / Companion Domain Sales</h2>
+    <div class="table-container">
+      <table>
+        <tr><th>Domain</th><th>Sale Price</th><th>Year</th></tr>
+        <tr><td>Girlfriend.ai</td><td>$275,000</td><td>2024</td></tr>
+        <tr><td>Scarlett.ai</td><td>$60,000</td><td>2025</td></tr>
+        <tr><td>Workers.ai</td><td>$74,900</td><td>2025</td></tr>
+        <tr><td>Pump.ai</td><td>$94,900</td><td>2025</td></tr>
+        <tr><td>Tether.ai</td><td>$100,000</td><td>2025</td></tr>
+        <tr><td>You.ai</td><td>$700,000</td><td>2024</td></tr>
+        <tr><td>Fin.ai</td><td>$1,000,000</td><td>2025</td></tr>
+      </table>
+    </div>
 
-  <h2>Recent Comparable AI / Companion Domain Sales</h2>
-  <table>
-    <tr>
-      <th>Domain</th>
-      <th>Sale Price</th>
-      <th>Year</th>
-    </tr>
-    <tr><td>Girlfriend.ai</td><td>$275,000</td><td>2024</td></tr>
-    <tr><td>Scarlett.ai</td><td>$60,000</td><td>2025</td></tr>
-    <tr><td>Workers.ai</td><td>$74,900</td><td>2025</td></tr>
-    <tr><td>Pump.ai</td><td>$94,900</td><td>2025</td></tr>
-    <tr><td>Tether.ai</td><td>$100,000</td><td>2025</td></tr>
-    <tr><td>You.ai</td><td>$700,000</td><td>2024</td></tr>
-    <tr><td>Fin.ai</td><td>$1,000,000</td><td>2025</td></tr>
-  </table>
+    <h2>Expanded AI Domain Sales Benchmarking</h2>
+    <div class="table-container">
+      <table>
+        <tr><th>Domain</th><th>Sale Price</th><th>Year</th></tr>
+        <tr><td>Home.ai</td><td>$800,000</td><td>2025</td></tr>
+        <tr><td>Cloud.ai</td><td>$600,000</td><td>2025</td></tr>
+        <tr><td>Qwen.ai</td><td>$500,000</td><td>2025</td></tr>
+        <tr><td>Sound.ai</td><td>$250,000</td><td>2024</td></tr>
+        <tr><td>Fantasy.ai</td><td>$120,000</td><td>2024</td></tr>
+        <tr><td>Vision.ai</td><td>$100,000</td><td>2024</td></tr>
+        <tr><td>Stack.ai</td><td>$73,000</td><td>2024</td></tr>
+      </table>
+    </div>
 
-  <h2>Expanded AI Domain Sales Benchmarking</h2>
-  <table>
-    <tr>
-      <th>Domain</th>
-      <th>Sale Price</th>
-      <th>Year</th>
-    </tr>
-    <tr><td>Home.ai</td><td>$800,000</td><td>2025</td></tr>
-    <tr><td>Cloud.ai</td><td>$600,000</td><td>2025</td></tr>
-    <tr><td>Qwen.ai</td><td>$500,000</td><td>2025</td></tr>
-    <tr><td>Sound.ai</td><td>$250,000</td><td>2024</td></tr>
-    <tr><td>Fantasy.ai</td><td>$120,000</td><td>2024</td></tr>
-    <tr><td>Vision.ai</td><td>$100,000</td><td>2024</td></tr>
-    <tr><td>Stack.ai</td><td>$73,000</td><td>2024</td></tr>
-  </table>
+    <h2>Top .COM Domain Benchmarks</h2>
+    <div class="table-container">
+      <table>
+        <tr><th>Domain</th><th>Sale Price</th><th>Buyer</th><th>Year</th></tr>
+        <tr><td>Chat.com</td><td>$15,000,000+</td><td>OpenAI</td><td>2024</td></tr>
+        <tr><td>Voice.com</td><td>$30,000,000</td><td>MicroStrategy</td><td>2019</td></tr>
+        <tr><td>Help.com</td><td>$3,000,000</td><td>Undisclosed</td><td>2015</td></tr>
+        <tr><td>Dreaming.com</td><td>$95,000</td><td>Undisclosed</td><td>2025</td></tr>
+      </table>
+    </div>
 
-  <h2>Top .COM Domain Benchmarks</h2>
-  <table>
-    <tr>
-      <th>Domain</th>
-      <th>Sale Price</th>
-      <th>Buyer</th>
-      <th>Year</th>
-    </tr>
-    <tr><td>Chat.com</td><td>$15,000,000+</td><td>OpenAI</td><td>2024</td></tr>
-    <tr><td>Voice.com</td><td>$30,000,000</td><td>MicroStrategy</td><td>2019</td></tr>
-<tr><td>Help.com</td><td>$3,000,000</td><td>Undisclosed</td><td>2015</td></tr>
-<tr><td>Dreaming.com</td><td>$95,000</td><td>Undisclosed</td><td>2025</td></tr>
-  </table>
+    <p class="note">
+      With both <strong>.ai</strong> and <strong>.com</strong> domains commanding premium prices, 
+      <strong>Dreampal.com’s</strong> asking price of <strong>$198,000</strong> is strategically positioned for 
+      visionary companies building the next generation of AI companions.
+    </p>
 
-  <p class="note">
-    With both <strong>.ai</strong> and <strong>.com</strong> domains commanding premium prices, 
-    <strong>Dreampal.com’s</strong> asking price of <strong>$198,000</strong> is strategically positioned for 
-    visionary companies building the next generation of AI companions.
-  </p>
+    <a href="contact.html" class="button">Contact Seller</a>
+  </main>
 
-<a href="contact.html" class="button">Contact Seller</a>
-      </main>
-<footer>
+  <footer>
     © dreampal.com – Premium Domain Listing
   </footer>
-<script>
+
+  <script>
     document.addEventListener("DOMContentLoaded", function () {
       const menuToggle = document.querySelector(".mobile-nav-toggle");
       const menuClose  = document.querySelector(".mobile-nav-close");
       const mobileNav  = document.querySelector(".mobile-nav");
 
       if (menuToggle && menuClose && mobileNav) {
-        // Open mobile menu
         menuToggle.addEventListener("click", () => {
           mobileNav.classList.add("active");
-          menuToggle.style.display = "none"; // hide ☰ when open
+          menuToggle.style.display = "none";
         });
-
-        // Close mobile menu
         menuClose.addEventListener("click", () => {
           mobileNav.classList.remove("active");
-          menuToggle.style.display = "block"; // show ☰ again
+          menuToggle.style.display = "block";
         });
       }
     });
   </script>
-
 </body>
 </html>
+
 
 
 
