--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 <body>
   <header>
     <h1>Dreampal.com</h1>
-    <p>Premium Domain for AI Companions & Digital Connection</p>
+    <p>Ideal Domain for AI Companions & Digital Connection</p>
   </header>
 
   <!-- Desktop Navigation -->
@@ -235,8 +235,8 @@
   <main>
     <h2>Memorable. Brandable. Trusted.</h2>
     <p>
-      The domain <strong>Dreampal.com</strong> is a once-in-a-lifetime opportunity for startups, investors, 
-      and innovators in the AI companion industry. Like <strong>PayPal.com</strong>, it is short, emotional, and 
+      The domain name <strong>Dreampal.com</strong> is a once-in-a-lifetime opportunity for startups, investors, 
+      and innovators in the AI companion industry. Like <strong>PayPal.com</strong>, the name is short, memorable, and 
       instantly brandable. It evokes warmth and 
       connection – combining <strong><em>dream</em></strong> (aspiration, imagination) with 
       <strong><em>pal</em></strong> (friend, companion)—perfect for the next generation of <strong>AI companions</strong> and digital avatars.
@@ -251,7 +251,7 @@
     <p>
       With AI companions attracting millions of users worldwide, the right domain name is a 
       <strong>competitive advantage</strong>. <strong>Dreampal.com</strong> offers both <strong>trust (as a .COM)</strong> 
-      and <strong>emotional resonance</strong> that makes it stand out.
+      and <strong>emotional resonance</strong> that makes it stand out. <strong>Make Dreampal your brand now!</strong>
     </p>
 
     <center>
@@ -286,6 +286,7 @@
   </script>
 </body>
 </html>
+
 
 
 
