--- a/index.html
+++ b/index.html
@@ -251,7 +251,8 @@
     <p>
       With AI companions attracting millions of users worldwide, the right domain name is a 
       <strong>competitive advantage</strong>. <strong>Dreampal.com</strong> offers both <strong>trust (as a .COM)</strong> 
-      and <strong>emotional resonance</strong> that makes it stand out. <strong>Make Dreampal your brand now!</strong>
+      and <strong>emotional resonance</strong> that makes it stand out. 
+<FONT face="Times New Roman, Times, serif" color=#003399 size=5> <B>Make Dreampal your brand now! </B></FONT>
     </p>
 
     <center>
@@ -286,6 +287,7 @@
   </script>
 </body>
 </html>
+
 
 
 
