--- a/index.html
+++ b/index.html
@@ -252,7 +252,8 @@
       With AI companions attracting millions of users worldwide, the right domain name is a 
       <strong>competitive advantage</strong>. <strong>Dreampal.com</strong> offers both <strong>trust (as a .COM)</strong> 
       and <strong>emotional resonance</strong> that makes it stand out. 
-<FONT face="Times New Roman, Times, serif" color=#003399 size=5> <B>Make Dreampal your brand now! </B></FONT>
+<center>
+<FONT face="Times New Roman, Times, serif" color=#003399 size=6> <B>Make Dreampal your brand now! </B></FONT></center>
     </p>
 
     <center>
@@ -287,6 +288,7 @@
   </script>
 </body>
 </html>
+
 
 
 
