--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
       <strong>competitive advantage</strong>. <strong>Dreampal.com</strong> offers both <strong>trust (as a .COM)</strong> 
       and <strong>emotional resonance</strong> that makes it stand out. 
 <center>
-<FONT face="Times New Roman, Times, serif" color=#003399 size=6> <B>Make Dreampal your brand now! </B></FONT></center>
+<FONT face="Times New Roman, Times, serif" color=#003399 size=6> <B>Make Dreampal your Brand now! </B></FONT></center>
     </p>
 
     <center>
