--- a/ai.html
+++ b/ai.html
@@ -208,10 +208,10 @@ footer {
     </section>
 
     <section>
-      <h2>Protecting the Dreampal Brand</h2>
+      <h2>Acquring the Dreampal Brand Name</h2>
       <p>
         With AI companions gaining millions of users worldwide, securing <strong>Dreampal.com</strong> means 
-        <strong>protecting your brand from competitors</strong>. 
+        <strong>protecting the brand name Dreampal from competitors</strong>. 
         Without the .COM, there’s always the risk of customer confusion, lost traffic, and diluted brand value.
       </p>
     </section>
@@ -246,6 +246,9 @@ footer {
 
 </body>
 </html>
+
+
+
 
 
 
