--- a/contact.html
+++ b/contact.html
@@ -165,7 +165,7 @@ footer {
     </ul>
   </nav>
   <main>
-    <h2>Inquire About Dreampal.com</h2>
+    <h2><FONT color=#003399>Make Dreampal Your Brand Now!</FONT></h2>
     <p>Please use the form below to submit your inquiry:</p>
 
     <form action="https://api.web3forms.com/submit" method="POST">
@@ -206,3 +206,4 @@ footer {
   </script>
 </body>
 </html>
+
