--- a/index.html
+++ b/index.html
@@ -248,9 +248,7 @@
       </div>
     </center>
 
-    <p>
-      With AI companions attracting millions of users worldwide, the right domain name is a 
-      <strong>competitive advantage</strong>. <strong>Dreampal.com</strong> offers both <strong>trust (as a .COM)</strong> 
+    <p>The AI race is one of the hottest business wars this decade, with the market expected to be worth $4.8 trillion by 2033. And with AI companions attracting millions of users worldwide, the right domain name is a <strong>competitive advantage</strong>. <strong>Dreampal.com</strong> offers both <strong>trust (as a .COM)</strong> 
       and <strong>emotional resonance</strong> that makes it stand out. 
 <center>
 <FONT face="Times New Roman, Times, serif" color=#003399 size=6> <B>Make Dreampal your Brand now! </B></FONT></center>
@@ -288,6 +286,7 @@
   </script>
 </body>
 </html>
+
 
 
 
